# BFUS2FractalProject

./: CMakeLists.txt  README.md  app.rc  main.cpp
inc/: BMP.h  ExperimentFractal.h  FirFractal.h  FractalWindow.h  MainMenu.h  MapleFractal.h  SheetFractal.h  SpiralFractal.h  fractal.h
inc/mathutils/: matrix.hpp
installer/: FractalGeneratorSetUp.iss  License_RUS.txt
src/: BMP.cpp  fractal.cpp
